renamed src dir

--- a/notebooks/ipfs.ipynb
+++ b/notebooks/ipfs.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f2489595",
    "metadata": {},
@@ -8,7 +9,7 @@
     "## Load protobuf models\n",
     "To build the protobuf files, I ran:\n",
     "```\n",
-    "cd src;\n",
+    "cd ipfskvs;\n",
     "protoc --python_out=. --proto_path=protobuf protobuf/sample.proto\n",
     "```"
    ]
@@ -25,7 +26,7 @@
     "import tempfile\n",
     "\n",
     "sys.path.append(\"..\")\n",
-    "sys.path.append(\"../src\")\n",
+    "sys.path.append(\"../ipfskvs\")\n",
     "sys.path.append(\"../protobuf\")\n",
     "\n",
     "from ipfs import Ipfs\n",
